@@ -1,25 +1,26 @@
 package com.uce.prueba.evaluacion.dominio.model;
 
-import lombok.Value;
+import java.time.LocalDateTime;
 
-/**
- * Value Object que representa la respuesta dada por un evaluado.
- * Vinculado a subtarea KAN-10.
- */
-@Value
 public class Respuesta {
-    Long reactivoId; // Referencia al reactivo
-    String opcionSeleccionada;
-
-    public Respuesta(Long reactivoId, String opcionSeleccionada) {
-        if (reactivoId == null) {
-            throw new IllegalArgumentException(
-                    "La respuesta debe estar vinculada a un reactivo (reactivoId no puede ser nulo)");
+    
+    private final String reactivoId;
+    private final String opcionSeleccionada;
+    private final LocalDateTime respondidoEn;
+    
+    public Respuesta(String reactivoId, String opcionSeleccionada) {
+        if (reactivoId == null || reactivoId.isBlank()) {
+            throw new IllegalArgumentException("La Respuesta debe estar vinculada a un Reactivo");
         }
-        if (opcionSeleccionada == null || opcionSeleccionada.trim().isEmpty()) {
-            throw new IllegalArgumentException("La opción seleccionada no puede estar vacía");
+        if (opcionSeleccionada == null || opcionSeleccionada.isBlank()) {
+            throw new IllegalArgumentException("La Respuesta debe tener una opción seleccionada");
         }
         this.reactivoId = reactivoId;
-        this.opcionSeleccionada = opcionSeleccionada;
+        this.opcionSeleccionada = opcionSeleccionada.toLowerCase();
+        this.respondidoEn = LocalDateTime.now();
     }
+    
+    public String getReactivoId() { return reactivoId; }
+    public String getOpcionSeleccionada() { return opcionSeleccionada; }
+    public LocalDateTime getRespondidoEn() { return respondidoEn; }
 }
